add scripts